# mnemosyne-cli

./: .gitignore  pyproject.toml
.github/workflows/: publish-images.yml
containers/: README.md
containers/base/: Containerfile  entrypoint.sh
containers/claude/: Containerfile
containers/config/: tmux.conf
containers/config/.claude/: keybindings.json  settings.json
containers/config/agents/: claude.toml
containers/config/zellij/: config.kdl
containers/config/zellij/layouts/: agent.kdl
containers/empiria-claude/: Containerfile
containers/empiria-claude-anvil/: Containerfile
containers/hapi-hub/: Containerfile  entrypoint.sh
scripts/: merge-gsd-roadmap.py  merge-gsd-state.py  mnemosyne-context-monitor.js  mnemosyne-prompt-guard.js  mnemosyne-statusline.js  post-change-hook.sh  statusline-wrapper.js
src/mnemosyne_cli/: main.py
src/mnemosyne_cli/commands/: add.py  agent.py  broker.py  component.py  config.py  doctor.py  generate.py  hook.py  init.py  merge_driver.py  model.py  refresh.py  shellenv.py  status.py  statusline_cmd.py  vault_cmd.py  work.py
src/mnemosyne_cli/lib/: broker.py  components.py  embeds.py  envrc.py  git.py  manifests.py  models.py  overrides.py  symlinks.py  techstack.py  vault.py
tests/: conftest.py  test_agent.py  test_broker.py  test_component_cmd.py  test_components.py  test_doctor.py  test_doctor_components.py  test_init.py  test_symlinks.py  test_toml.py  test_worktree.py
