[project]
name = "mnemosyne-cli"
version = "0.2.4"
description = "Mnemosyne vault operational CLI"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.24.1",
    "tomli-w>=1.0",
]

[project.scripts]
mnemosyne = "mnemosyne_cli.main:app"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
